Completed QuestNav ADB recovery